# dotz

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish.yml
src/: main.rs
src/errors/: mod.rs
tests/: .dotzignore
tests/.dot/: .dotzignore
tests/.dotDest/: test.conf
tests/.dotDest/test/: aaa
tests/.dotDest/test/tests/: aaa
