[package]
name = "dotz"
version = "1.0.1"
edition = "2021"
authors = ["Andres Copeticona <contact@zeroproject.dev>"]
license = "GPL-3.0"
description = "A CLI tool to manage your dotfiles (unix only)"
repository = "https://github.com/zeroproject-0/dotz"
homepage = "https://zeroproject.dev/dotz"
documentation = "https://zeroproject.dev/dotz"
readme = "README.md"
keywords = ["dotfiles", "cli", "tool", "unix", "linux"]
categories = ["command-line-utilities"]
exclude = ["**/tests/**"]

[dependencies]

[dev-dependencies]
assert_cli = "0.6.3"
